reverted build-rat.xml and minor fixes for java 11